lab5/mesh-role-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-mesh-role
spec:
  selector:
    matchLabels:
      app: productpage
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[roles]
      values: ["mesh"]
